--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 # Setup
 title:               'Latin Hagiography'
-tagline:             'A preliminary digital edition'
+tagline:             'A preliminary digital legendarium'
 description:         'Latin Hagiography uses the theme Ed which is designed for textual editors based on minimal computing principles, and focused on legibility and flexibility.'
 url:                 'http://minicomp.github.io'
 baseurl:             '/latin-hagiography'
