--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 title:               'Latin Hagiography'
 tagline:             'A preliminary digital legendarium'
 description:         'Latin Hagiography uses the Jekyll theme Ed which is designed for textual editors. Ed is based on minimal computing principles, and focused on legibility and flexibility.'
-url:                 'http://minicomp.github.io'
-baseurl:             '/latin-hagiography'
+url:                 'http://www.latinhagiography.com'
+baseurl:             '/'
 
 # About/contact
 author:
