--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title:               'Latin Hagiography'
 tagline:             'A preliminary digital legendarium'
 description:         'Latin Hagiography uses the Jekyll theme Ed which is designed for textual editors. Ed is based on minimal computing principles, and focused on legibility and flexibility.'
-url:                 'http://www.latinhagiography.com'
+url:                 'https://www.latinhagiography.com'
 baseurl:             '/'
 
 # About/contact
