--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Setup
 title:               'Latin Hagiography'
 tagline:             'A preliminary digital legendarium'
-description:         'Latin Hagiography uses the Jekyll theme Ed which is designed for textual editors. Ed is based on minimal computing principles, and focused on legibility and flexibility.'
+description:         'This website uses the Jekyll theme Ed which is designed for textual editors. Ed is based on minimal computing principles and is focused on legibility and flexibility.'
 url:                 'https://www.latinhagiography.com'
 baseurl:             '/'
 
